<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/details_title"
        android:layout_width="196dp"
        android:layout_height="79dp"
        android:text="@string/details"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textCommon"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="236dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/common"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textBotanical"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="104dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/botanical"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toTopOf="@+id/textZone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textCommon" />

    <TextView
        android:id="@+id/textZone"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="104dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/zone"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCommon" />

    <TextView
        android:id="@+id/textLight"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/light"
        android:importantForAutofill="no"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/textZone"
        app:layout_constraintTop_toBottomOf="@+id/textBotanical"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginTop="108dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/price"
        android:importantForAutofill="no"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textZone"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/textAvailability"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginTop="99dp"
        android:ems="10"
        android:hint="@string/availability"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toEndOf="@+id/textPrice"
        app:layout_constraintTop_toBottomOf="@+id/textLight"
        app:layout_constraintVertical_bias="0.182"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>